@@ -1,6 +1,8 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.643 2009-10-11 22:04:30 guru Exp $
+	$Id: ChangeLog,v 1.644 2009-10-12 23:42:13 guru Exp $
 -----------------------------------------------------------------------------------------
+2009-10-12
+	* gmt_plot.c:		qsort of GMT_LONGs passed ints
 2009-10-11
 	* misc/kml2gmt.c:	Mix of fopen and GMT_fclose not good under Windoze
 
